Fix broken nav icon on mobile

--- a/less/components/_header.less
+++ b/less/components/_header.less
@@ -135,7 +135,7 @@ header.landing-header {
 }
 
 @media screen and (max-width: @screen-xs-max) {
-  .toggle-nav {
+  header.landing-header .toggle-nav {
     display: block;
     text-align: right;
     height: 1rem;
